# TRINITY

./: .coverage  CLAUDE.md  Cargo.toml  INPROGRESS.md  README.md  STATUS.md  TO_FIX_LIST.md  libframe_graph.rlib  libtest_debug_dumper.rlib  mod.rs_test_work  package-lock.json  package.json  pyproject.toml
crates/renderer-backend/: :memory:test_0_ThreadId(2)-journal  :memory:test_0_ThreadId(60)  :memory:test_0_ThreadId(61)  :memory:test_0_ThreadId(7)  :memory:test_10_ThreadId(1356)  :memory:test_10_ThreadId(1445)  :memory:test_10_ThreadId(1446)  :memory:test_10_ThreadId(1455)  :memory:test_10_ThreadId(26)  :memory:test_10_ThreadId(36)  :memory:test_10_ThreadId(761)  :memory:test_10_ThreadId(835)  :memory:test_10_ThreadId(845)  :memory:test_11_ThreadId(1357)  :memory:test_11_ThreadId(1445)  :memory:test_11_ThreadId(1446)  :memory:test_11_ThreadId(1447)  :memory:test_11_ThreadId(1456)  :memory:test_11_ThreadId(27)  :memory:test_11_ThreadId(37)  :memory:test_11_ThreadId(762)  :memory:test_11_ThreadId(836)  :memory:test_11_ThreadId(846)  :memory:test_12_ThreadId(1358)  :memory:test_12_ThreadId(1446)  :memory:test_12_ThreadId(1447)  :memory:test_12_ThreadId(1457)  :memory:test_12_ThreadId(28)  :memory:test_12_ThreadId(38)  :memory:test_12_ThreadId(763)  :memory:test_12_ThreadId(837)  :memory:test_12_ThreadId(847)  :memory:test_13_ThreadId(1447)  :memory:test_13_ThreadId(1448)  :memory:test_13_ThreadId(1449)  :memory:test_13_ThreadId(1458)  :memory:test_13_ThreadId(39)  :memory:test_13_ThreadId(838)  :memory:test_13_ThreadId(848)  :memory:test_14_ThreadId(1360)  (+130 more)
crates/renderer-backend/benches/: content_store.rs  material_system.rs  pipeline_cache.rs
crates/renderer-backend/shaders/: blur_horizontal.wgsl  blur_vertical.wgsl  build_indirect.wgsl  compact.wgsl  contact_shadow.comp.wgsl  ddgi.wgsl  ddgi_grid_shift.comp.wgsl  ddgi_probe_sampling.wgsl  ddgi_rasterized_to_sh.comp.wgsl  downsample.wgsl  frustum_cull.wgsl  histogram.wgsl  hiz_downsample.wgsl  hiz_generate.comp.wgsl  hiz_occlusion.wgsl  light_culling.wgsl  lighting_pass.comp.wgsl  lod_select.wgsl  mip_generate.comp.wgsl  particles.wgsl  pbr.frag.wgsl  pbr.vert.wgsl  prefix_scan.wgsl  radix_sort.wgsl  reduce_max.wgsl  reduce_min.wgsl  reduce_sum.wgsl  reflection_bilateral_upscale.comp.wgsl  shadow.frag.wgsl  shadow.vert.wgsl  shadow_common.wgsl  shadow_csm.wgsl  shadow_filter_esm.wgsl  shadow_filter_pcf.wgsl  shadow_filter_pcss.wgsl  shadow_filter_vsm.wgsl  spherical_harmonics.wgsl  ssgi_trace.comp.wgsl  ssr_fade.wgsl  ssr_ray_march.comp.wgsl  (+3 more)
crates/renderer-backend/src/: aerial_perspective.rs  animation_assets.rs  animation_clip.rs  animation_config.rs  animation_events.rs  animation_graph.rs  animation_graph_tests.rs  animation_layers.rs  animation_tests.rs  animation_textures.rs  asset_loader.rs  blas.rs  blas_pool.rs  blend_node.rs  blend_shapes.rs  blend_tree.rs  bridge.rs  bridge_handlers.rs  bridge_health.rs  bridge_protocol.rs  budget.rs  buffer_mapping.rs  cache_db.rs  celestial_bodies.rs  checksum.rs  clear_commands.rs  clip_compression.rs  clip_player.rs  cloud_lighting.rs  cloud_noise.rs  cloud_raymarching.rs  cloud_shadows.rs  cloud_temporal.rs  command_buffer.rs  command_encoder.rs  component_store.rs  compute_pass.rs  compute_pipeline.rs  contact_shadow.rs  copy_commands.rs  (+152 more)
crates/renderer-backend/tests/: adapter_enumeration_blackbox.rs  adapter_enumeration_whitebox.rs  adapter_limits_blackbox.rs  adapter_limits_whitebox.rs  adapter_properties_blackbox.rs  adapter_properties_whitebox.rs  adapter_selection_blackbox.rs  adapter_selection_whitebox.rs  backend_selection_blackbox.rs  backend_selection_whitebox.rs  blackbox_alias_policy.rs  blackbox_allocation.rs  blackbox_async2.rs  blackbox_async_exec.rs  blackbox_async_timeline.rs  blackbox_barrier_batching.rs  blackbox_barrier_detection.rs  blackbox_barrier_opt.rs  blackbox_barriers.rs  blackbox_barriers_fix.rs  blackbox_bind_group_cache.rs  blackbox_bind_group_layout_cache.rs  blackbox_bindless_bind_group.rs  blackbox_bindless_buffer_registry.rs  blackbox_bindless_buffers.rs  blackbox_bindless_textures.rs  blackbox_blend_mode.rs  blackbox_bottleneck.rs  blackbox_buffer.rs  blackbox_buffer_mapping.rs  blackbox_buffer_pool.rs  blackbox_buffer_readback.rs  blackbox_buffer_registry.rs  blackbox_build_indirect.rs  blackbox_cache_warming.rs  blackbox_chained_opt.rs  blackbox_color_target.rs  blackbox_compiled_pass.rs  blackbox_compiler.rs  blackbox_component_store.rs  (+285 more)
crates/renderer-backend/tests_pending/: PENDING_FIXES.md  blackbox_allocation.rs  blackbox_barrier_resolve.rs  blackbox_content_differ.rs  blackbox_file_backend.rs  blackbox_frame_graph_conversion.rs  blackbox_frame_graph_mem.rs  blackbox_graph_dot.rs  blackbox_material_descriptor.rs  blackbox_state_transitions.rs  test_build_pipeline.rs  test_demoscene_integration.rs  test_pbr_pipeline.rs  unit_phase6_gpu_driven.rs  whitebox_frame_graph_integration.rs  whitebox_graph_dot_exporter.rs  whitebox_t_fg_9_5_regression.rs  whitebox_texture_uploads.rs
crates/trinity-contracts/: Cargo.toml  README.md
crates/trinity-contracts-macros/: Cargo.toml
crates/trinity-contracts-macros/src/: lib.rs
crates/trinity-contracts/src/: algebra.rs  layout.rs  lib.rs  proptest.rs  rollout.rs  runtime.rs  schema.rs
crates/trinity-contracts/tests/: blackbox_algebra.rs  blackbox_contracts.rs  blackbox_layout.rs  blackbox_parsing.rs  blackbox_proptest.rs  blackbox_rollout.rs  blackbox_runtime.rs  blackbox_schema.rs  whitebox_algebra.rs  whitebox_contracts.rs  whitebox_layout.rs  whitebox_parsing.rs  whitebox_proptest.rs  (+3 more)
crates/trinity-harness/: Cargo.toml  FIXES_AND_IMPROVEMENTS.md  README.md
flowforge/flowforge_backend/: __init__.py  __main__.py  config.py  pyproject.toml  trinity_introspection.py
omega/: Cargo.toml
omega/src/: bridge.rs  fixed.rs  lib.rs  mat.rs  quat.rs  rng.rs  spatial.rs  trig.rs  vec.rs
omega/tests/: math_tests.rs  rhi_command_tests.rs  rhi_device_tests.rs  rhi_pipeline_tests.rs  rhi_resource_tests.rs  rhi_stress_recovery_tests.rs  rhi_swapchain_binding_tests.rs  rhi_sync_tests.rs
(+4921 files in other folders)
