[package]
name = "omega"
version = "0.1.0"
edition = "2021"
description = "Omega rendering runtime - RHI abstraction with Python bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
serde_json = "1"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Renderer backend for frame graph compilation
renderer-backend = { path = "../crates/renderer-backend" }

[dev-dependencies]
bytemuck = "1"

[features]
default = []
pyo3 = ["dep:pyo3"]
