[package]
name = "renderer-backend"
version = "0.1.0"
edition = "2021"
description = "Rendering backend with WGSL shaders for the TRINITY engine"

[lib]
name = "renderer_backend"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "22"
parking_lot = "0.12"
crossbeam = "0.8"
sha2 = "0.10"
pollster = "0.3"

[dev-dependencies]
naga = { version = "24", features = ["wgsl-in"] }
regex = "1"
