[package]
name = "renderer-backend"
version = "0.1.0"
edition = "2021"
description = "Rendering backend with WGSL shaders for the TRINITY engine"

[lib]
name = "renderer_backend"
path = "src/lib.rs"

[dependencies]
arc-swap = "1"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "22"
parking_lot = "0.12"
crossbeam = "0.8"
sha2 = "0.10"
pollster = "0.3"
thiserror = "1.0"
log = "0.4"
static_assertions = "1.1"
ordered-float = "4"
naga = { version = "24", features = ["wgsl-in"] }
image = { version = "0.25", optional = true }
notify = { version = "6.1", optional = true }
glob = { version = "0.3", optional = true }
pyo3 = { version = "0.22", optional = true }

[features]
default = []
asset-loading = ["image"]
hot-reload = ["notify", "glob"]
pyo3 = ["dep:pyo3"]
test-helpers = []

[dev-dependencies]
naga = { version = "24", features = ["wgsl-in"] }
regex = "1"
