[package]
name = "trinity-contracts"
version = "0.1.0"
edition = "2021"
description = "Contract annotations for Trinity - runtime checks and property testing"
license = "MIT"

[dependencies]
trinity-contracts-macros = { path = "../trinity-contracts-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"
