[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowforge-backend"
version = "0.1.0"
description = "Python backend sidecar for FlowForge visual programming environment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FlowForge Team" }
]
keywords = ["flowforge", "visual-programming", "ipc", "trinity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]

[project.scripts]
flowforge-backend = "flowforge_backend.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["flowforge_backend"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
