[package]
name = "flowforge"
version = "0.1.0"
description = "A domain-agnostic visual programming environment"
authors = ["FlowForge Team"]
license = "MIT"
repository = "https://github.com/yourorg/flowforge"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# Test dependencies for integration tests - serde_json already in deps

# Integration test configuration
[[test]]
name = "sidecar_tests"
path = "tests/sidecar_tests.rs"
# This test doesn't require linking with the main crate to avoid GTK dependencies
harness = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
